--- a/desafio10-revisao/android.html
+++ b/desafio10-revisao/android.html
@@ -16,10 +16,8 @@
     </header>
 
     <nav>
-        <a href="#">Home</a>
+        <a href="#">Home</a><a href="#">Contato</a>
         <a href="#">Notícias</a>
-        
-        <a href="#">Contato</a>
     </nav>
 
     <main>
